--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header></header>
+  <header>
+  <h1>DevOps Summit</h1>
+    <nav>
+        <a href="#agenda">Agenda</a>
+        <a href="#palestrantes">Palestrantes</a>
+    </nav>
+  </header>
   <main></main>
   <footer></footer>
 </body>
