seção agenda, h2 verde

--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
 </head>
 <body>
   <header></header>
-  <main></main>
+  <main>
+  <section id="agenda">
+    <h2>Agenda do Evento</h2>
+    <ul>
+      <li>09:00 – Abertura</li>
+      <li>10:00 – CI/CD na prática</li>
+      <li>11:30 – Observabilidade moderna</li>
+      <li>14:00 – Deploy contínuo em escala</li>
+      <li>16:00 – Mesa redonda</li>
+    </ul>
+    </section>
+  </main>
   <footer></footer>
 </body>
 </html>
