--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
 </head>
 <body>
   <header></header>
-  <main></main>
+  <main>
+    <section id="palestrantes">
+        <h2>Nossos Palestrantes</h2>
+        <ul>
+            <li>Joana Silva — Eng. DevOps</li>
+            <li>Marcos Souza — SRE</li>
+            <li>Ana Lima — Cloud Architect</li>
+        </ul>
+    </section>
+  </main>
   <footer></footer>
+  <script src="scripts.js"></script>
 </body>
 </html>
